--- a/day=1.html
+++ b/day=1.html
@@ -7,8 +7,8 @@
     <title> i-rise home page</title>
 </head>
 
-
-
+<!-- body to show details -->
+   
     <body style="color red; background-color: beige; font-size: large;">
 
         <h1>welcome to irise defult css = font-size - 16 font- weight - bold</h1>
@@ -18,7 +18,7 @@
         <h5>welcome to irise defult css = font-size - 35 font- weight - bold</h5>
         <h6>welcome to irise defult css = font-size - 40 font- weight - bold</h6>
 
-        <p style="color: navy; background-color: white; font-family: sans=serif; font-size: 2;">
+        <p style="color: navy; background-color: white; font-family: sans=serif; font-size: 22px;text-align: center;">
             
             this is my paragraph.<br/> br tag is the closing tag<br/> .this is my paragraph.<br/> this is my paragraph.<br/> this is my paragraph.<br/> this is my paragraph .<br/>this is my paragraph.<br/> this is my paragraph .<br/>this is my paragraph.<br/>
         </p>
