--- a/day-2/da-3/day-3.html
+++ b/day-2/da-3/day-3.html
@@ -6,7 +6,7 @@
     <style>
         table,
         td {
-            border: 1px dashed black;
+            border: 4px solid black;
             border-collapse: collapse;
             color: crimson;
             background-color: aqua;
