--- a/day-4/day-4.html
+++ b/day-4/day-4.html
@@ -3,7 +3,7 @@
     <head>
         <title> day-4</title>
         <link rel="icon" type="image/x-icon"
-        href="https://upload.wikimedia.org/wikipedia/commons/4/40/Sunflower_sky_backdrop.jpg"
+        href="https://upload.wikimedia.org/wikipedia/commons/4/40/Sunflower_sky_backdrop.jpg"/>
         <style>
             .irise{
                 color: red;
