--- a/day=1.html
+++ b/day=1.html
@@ -9,7 +9,7 @@
 
 <!-- body to show details -->
    
-    <body style="color red; background-color: beige; font-size: large;">
+    <body style="color: red; background-color: beige; font-size: large;">
 
         <h1>welcome to irise defult css = font-size - 16 font- weight - bold</h1>
         <h2>welcome to irise defult css = font-size - 18 font- weight - bold</h2>
