--- a/day7/day-11.html
+++ b/day7/day-11.html
@@ -6,8 +6,58 @@
     <title>day-11</title>
 </head>
 <body>
-    <div style="width: 300px;height: 300px; border: 5px solid black; padding-top: 50px;">
-        testing padding
+    <div style="width: 300px;height: 300px; border: 5px solid black;">
+       <span style="padding-right: 50px;">testing padding</span> <span>testing padding</span>
     </div>
+
+    <div style="width: 300px;height: 300px; border: 5px solid black; padding right: 50px;">
+        <h1 style="padding-bottom: 100px;">testing padding</h1> 
+        <h1>testing padding 2</h1>
+     </div>
+
+     <div style="width: 300px; height: 300px; border: 5px solid black; padding: 150px 50px;">
+     Testing padding
+    </div>
+
+    <div style="width: 300px; height: 300px; border: 5px solid black; padding: 250px 50px 100px 150px;">
+        Testing padding
+       </div>
+
+       <div style="width: 200px; height: 300px; border: 5px solid black; padding: 100px; margin: 100px;">
+        Testing padding+margin
+       </div>
+
+       <div style="width: 700px; border: 5px solid red; ">testing width</div>  //inspect the page below 300px 
+
+       <div style="max-width: 500px; border: 5px solid red;">testing max width</div>
+
+       <div style="width: 500px; height: 300px; border: 5px solid red ; outline: 5px solid black; padding: 50px; margin: 50px; outline-offset: 10px;">
+        testing outline
+       </div>
+
+       <p style="color: rgb(78, 16, 223);">testing color</p>
+
+       <div style="text-align: right;">testing text-align</div>
+       <div style="text-align: center;">testing text-align</div>
+       <div style="text-align: left;">testing text-align</div> 
+
+       <p style="text-align-last: right;">This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.</p>
+       <p style="text-align-last: center;">This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.</p>
+       <p style="text-align-last: left;">This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.This is a paragraph tag.</p>
+
+
+       <p style="text-decoration-line: overline;">testing text decoration line</p>
+       <p style="text-decoration-line: line-through;">testing text decoration line through</p>
+       <p style="text-decoration-line: underline;">testing text decoration underline</p>
+       <p style="text-decoration-line: overline underline;">testing text decoration overline underline</p>
+
+       <p style="text-decoration-line: overline; text-decoration-color: blue;">testing text decoration color</p>
+
+       <p style="text-decoration-line: overline; text-decoration-color: blue; text-decoration-style: dashed;">testing text decoration color style</p>
+
+       <p style="text-decoration-line: overline; text-decoration-thickness: 10px;">testing text-decoration thickness</p>
+
+
+
 </body>
-</html>
+</html> 
