--- a/day13/day-13.html
+++ b/day13/day-13.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day-13</title>
 </head>
@@ -13,5 +13,16 @@
       <div style="display: none ;">
         this is div a block level element with testing display none
       </div>
+
+      <div style="width: 100%; border: 5px solid red;">
+         <div style="margin-left: 25%; width: 50%; border: 5px solid black;">testing margin auto</div>
+         <div style="margin: auto; width: 50%; border: 5px solid black;">testing margin auto</div>
+    </div>
+
+    <div style="width: 100%; border: 5px solid black;">
+      <img style="display: block; margin-left: auto;  margin-right: auto; width: 40%;" 
+      src="./../image/Mahindra Thar Right Rear View.jpg">
+
+    </div>
 </body>
 </html>
