--- a/day-14/day-14.html
+++ b/day-14/day-14.html
@@ -6,7 +6,7 @@
     <title>day-14</title>
 </head>
 <body>
-    <div>
+    <!-- <div>
         <div>1</div>
         <div>2</div>
         <div>3</div>
@@ -19,8 +19,6 @@
         <div>3</div>
         <div>4</div>
     </div>
-
-    
 
     <div style="display: flex; flex-direction: row;">
         <div>1</div>
@@ -48,6 +46,14 @@
         <div>2</div>
         <div>3</div>
         <div>4</div>
+    </div> -->
+
+    <div style="display: flex;">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+
     </div>
 </body>
 </html>
