--- a/day-14/day-14.html
+++ b/day-14/day-14.html
@@ -48,12 +48,53 @@
         <div>4</div>
     </div> -->
 
-    <div style="display: flex;">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
+    <!-- <h1>justify-content: space between</h1>
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+        <div style="width: 22%; border: 3px solid black;">1</div>
+        <div style="width: 22%; border: 3px solid black;">2</div>
+        <div style="width: 22%; border: 3px solid black;">3</div>
+        <div style="width: 22%; border: 3px solid black;">4</div>
+        <div style="width: 22%; border: 3px solid black;">5</div>
+        <div style="width: 22%; border: 3px solid black;">6</div>
+        <div style="width: 22%; border: 3px solid black;">7</div>
+        <div style="width: 22%; border: 3px solid black;">8</div>
+    </div>
 
+    <h1>justify-content:space evenly</h1>
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-evenly; margin-top: 3px;">
+        <div style="width: 22%; border: 3px solid black;">1</div>
+        <div style="width: 22%; border: 3px solid black;">2</div> 
+        <div style="width: 22%; border: 3px solid black;">3</div>
+        <div style="width: 22%; border: 3px solid black;">4</div>
+        <div style="width: 22%; border: 3px solid black;">5</div>
+        <div style="width: 22%; border: 3px solid black;">6</div>
+        <div style="width: 22%; border: 3px solid black;">7</div>
+        <div style="width: 22%; border: 3px solid black;">8</div>
+    </div>
+
+    <h1>justify-content:space-around</h1>
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-around; margin-top: 3px;">
+        <div style="width: 22%; border: 3px solid black;">1</div>
+        <div style="width: 22%; border: 3px solid black;">2</div> 
+        <div style="width: 22%; border: 3px solid black;">3</div>
+        <div style="width: 22%; border: 3px solid black;">4</div>
+        <div style="width: 22%; border: 3px solid black;">5</div>
+        <div style="width: 22%; border: 3px solid black;">6</div>
+        <div style="width: 22%; border: 3px solid black;">7</div>
+        <div style="width: 22%; border: 3px solid black;">8</div>
+    </div> -->
+
+    <div style="display: flex;">
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
     </div>
 </body>
 </html>
