--- a/day-14/day-14.html
+++ b/day-14/day-14.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>day-14</title>
+    <style>
+        .parentdiv:hover{
+        border: 2px solid black;
+        color: red;
+        }
+    </style>
 </head>
 <body>
     <!-- <div>
@@ -84,17 +90,57 @@
         <div style="width: 22%; border: 3px solid black;">8</div>
     </div> -->
 
-    <div style="display: flex;">
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
-        <div style="width: 17%; height: 350px; border: 2px solid black; margin-bottom: 25px   ;">1</div>
+    <div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
+        <div class="parentdiv" style="width: 17%; height: 500px; margin-bottom: 25px;">
+           <img style="width: 100%; height: 400px;" src="./../image/Mahindra Thar Right Rear View.jpg"/>
+           <h4>car</h4>
+           <h4>price</h4>
+        </div>
     </div>
 </body>
 </html>
