--- a/day-15/day-15.html
+++ b/day-15/day-15.html
@@ -15,13 +15,25 @@
             height: 300px;
             border: 2px solid black;
         }
-        @media screen and (mid-width: 500px) {
+        @media screen and (min-width: 1440px) and(max-width: 470px) {
             #parentdiv{
                 color: red;
                 font-size: 50px;
             }
         }
-    </style>
+        /* @media screen and (min-width: 471px) and(max-width: 970px) {
+            #parentdiv{
+                color: blue;
+                font-size: 50px;
+            }
+        }
+        @media screen and (min-width: 971px) and(max-width: 1440px) {
+            #parentdiv{
+                color: red;
+                font-size: 50px;
+            }
+        }
+    </style> */
 </head>
 <body>
     <div id="parentdiv">
